--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <div class="wrapper">
         <div class="maincontent">
-        <section class="section first">
+        <section class="section first active">
             <div class="container first__container">
             <header class="header">
                 <div class="header__logo">
@@ -1094,8 +1094,9 @@
              <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
             <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript">
             </script>
-            <script src="js/main.js"></script> 
-            <script src="js/menu.js"></script> 
+           
+            <script src="js/menu.js"></script>
+            <script src="js/main.js"></script>  
             <script src="js/team.js"></script> 
             <script src="js/slider.js"></script> 
            <!-- <script src="js/order.js"></script> -->
